Open in Colab badge, resolve/remove TODOs

--- a/tutorials/interactive_toy_2d.ipynb
+++ b/tutorials/interactive_toy_2d.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/cooper-org/cooper/blob/master/tutorials/interactive_toy_2d.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Optimization Dynamics: an Interactive Tool\n",
     "\n",
     "This notebook concentrates on improving your intuitive understanding of the methods employed by\n",
@@ -28,20 +35,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: update TOC\n",
     "## Table of Contents:\n",
     "* [Setup](#setup)\n",
     "* [Constrained Minimization Problem](#cmp)\n",
-    "* [Widget](#widget)\n",
+    "* [Interactive Plots](#plots)\n",
+    "    * [Widget](#widget)\n",
+    "    * [Reading the plots](#reading)\n",
+    "    * [The Lagrangian multipliers](multipliers)\n",
     "* [References](#references)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Setup <a class=\"anchor\" id=\"setup\"></a>\n",
-    "Install Cooper, with the requirements for running `examples`."
    ]
   },
   {
@@ -50,12 +51,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -e git+https://github.com/cooper-org/cooper#egg=.[examples]"
+    "# To install Cooper in colab, run:\n",
+    "# !pip install git+https://github.com/cooper-org/cooper\n",
+    "# To install it locally, run:\n",
+    "# pip install git+https://github.com/cooper-org/cooper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +80,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Constrained Minimization Problem <a class=\"anchor\" id=\"cmp\"></a>\n",
-    "\n",
+    "## Constrained Minimization Problem <a class=\"anchor\" id=\"cmp\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Consider the following constrained optimization problem on\n",
     " the 2D domain $(x, y) \\in [0,\\pi/2] \\times [0,\\infty]$\n",
     "\n",
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,8 +156,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bonus: non-convex $f(x, y)$ and $g(x, y)$.\n",
-    "\n",
+    "### Bonus: non-convex $f(x, y)$ and $g(x, y)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Associated with `Toy2DCMP(problem_type=\"Concave\")`\n",
     "\n",
     "Consider a similar optimization problem to Eq. (1), also on $[0,\\pi/2] \\times [0,\\infty]$:\n",
@@ -166,8 +180,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Widget <a class=\"anchor\" id=\"widget\"></a>\n",
-    "\n",
+    "## Interactive Plots <a class=\"anchor\" id=\"plots\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Widget <a class=\"anchor\" id=\"widget\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The `Toy2DWidget` class implements a widget which shows the optimization dynamics of [Cooper](https://github.com/cooper-org/cooper) when solving the problems in Eq. (1) and Bonus: Eq. (3). The widget keeps track of various metrics throughout the optimization of Eq. (2) via simultaneous gradient descent on the parameters $(x,y)$ and gradient ascent on the dual variable $\\lambda$.\n",
     "\n",
     "You can play by adjusting different hyper-parameters (optimizer type, learning rate) of the widget to see how they affect the optimization path.\n",
@@ -180,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da954264ccbd44159c0a97fbb8d9eb32",
+       "model_id": "3d1b9d88ab4d4faa8cfcf1b58091f88f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,10 +232,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reading the plots\n",
-    "\n",
-    "Run the next cell. This widget has some hyper-parameters fixed, but you can still tune the constraint level $\\epsilon$ and the initialization.\n",
-    "\n"
+    "### Reading the plots <a class=\"anchor\" id=\"reading\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the next cell. This widget has some hyper-parameters fixed, but you can still tune the constraint level $\\epsilon$ and the initialization."
    ]
   },
   {
@@ -272,8 +302,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Lagrangian multipliers\n",
-    "\n",
+    "### The Lagrangian multipliers <a class=\"anchor\" id=\"multipliers\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The effective use of [Cooper](https://github.com/cooper-org/cooper) requires an understanding of the behavior of the Lagrangian multipliers $\\lambda$ associated with each constraint. Recall from Eq. (2) the problem we are solving:\n",
     "$$ \\begin{align*}\n",
     "& \\underset{x, y}{\\text{min}}\\ \\underset{\\lambda \\geq 0}{\\text{max}}\\ f(x,y) +\n",
@@ -341,100 +376,6 @@
     "> * Try different values of the dual learning rate. What do you observe? \n",
     "> * Are there oscillations in the value of the constraint or multiplier? Does their amplitude or frequency change for different dual learning rates?\n",
     "> * Is the constraint satisfied by the end of training?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dual Restarts\n",
-    "\n",
-    "> **TODO**\n",
-    "> Dual restarts seems to be detrimental in this specific problem. Maybe because $f$ and $g$ present a nearly orthogonal trade-off?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "561309ae7c4542019781c421fd780bbc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(IntSlider(value=1000, description='Max Iters', max=3000, min=100, step=100), Che…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "widget = Toy2DWidget(\n",
-    "    Toy2DCMP,\n",
-    "    num_iters=1000,\n",
-    "    epsilon=0.7,\n",
-    "    problem_type=\"Convex\",\n",
-    "    primal_optim=\"SGD\",\n",
-    "    primal_lr=0.02,\n",
-    "    dual_optim=\"SGD\",\n",
-    "    dual_lr=0.5,\n",
-    "    x=0.7,\n",
-    "    y=1.8,\n",
-    "    extrapolation=False,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Extrapolation\n",
-    "\n",
-    "The are no convergence guarantees for gradient descent-ascent updates on general min-max games. Korpelevich (1976) and Gidel et. al (2019)\n",
-    "\n",
-    "> **TODO**\n",
-    "> Non-convex case often gets stuck at the corners. Otherwise, it oscillates even for Extrapolation!\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02cb720039754d738850c15ab5212a9e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(IntSlider(value=1000, description='Max Iters', max=3000, min=100, step=100), Che…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "widget = Toy2DWidget(\n",
-    "    Toy2DCMP,\n",
-    "    num_iters=1000,\n",
-    "    epsilon=0.7,\n",
-    "    problem_type=\"Convex\",\n",
-    "    primal_optim=\"SGD\",\n",
-    "    primal_lr=0.02,\n",
-    "    dual_optim=\"SGD\",\n",
-    "    dual_lr=0.5,\n",
-    "    x=0.7,\n",
-    "    y=1.8,\n",
-    "    dual_restarts=False,\n",
-    ")"
    ]
   },
   {
